[gd_scene load_steps=4 format=3 uid="uid://pxn4070gykuf"]

[ext_resource type="Script" path="res://src/puzzles/puzzle_console.gd" id="1_1ccsu"]
[ext_resource type="PackedScene" uid="uid://bajjv77iyk4qa" path="res://src/puzzles/flow/flow_puzzle.tscn" id="2_jtsje"]
[ext_resource type="Texture2D" uid="uid://cuyqkd1kxtbr0" path="res://assets/backgrounds/console.png" id="3_x8jvf"]

[node name="PuzzleConsole" type="CanvasLayer"]
script = ExtResource("1_1ccsu")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.623529)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(640, 1080)
texture = ExtResource("3_x8jvf")

[node name="FlowPuzzle" parent="." instance=ExtResource("2_jtsje")]

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 722.0
offset_top = 124.0
offset_right = 948.0
offset_bottom = 189.0
theme_override_font_sizes/font_size = 24
text = "Reset Puzzle
"

[connection signal="puzzle_complete" from="FlowPuzzle" to="." method="on_puzzle_complete"]
[connection signal="pressed" from="Button" to="." method="reset_puzzle"]
